--- a/style.css
+++ b/style.css
@@ -84,6 +84,8 @@ li:hover{
 /* Using a dot allows you to create a CSS class. You can use this in multiple locations in your HTML code. */ 
 #sketch-holder {
   position: absolute;
-/*   margin-left: -100px; */
-  width: 100%;
+  margin-left: 33%;
+  margin-right: 33%;
+  width: 400px;
+  height: 400px;
 }
